--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@ body {
   background-size: contain;
   width: 100%;
   height: 100vh;
-  font-family: Josefin, Roboto, sans-serif;
+  font-family: Roboto, sans-serif;
   font-size: 1.2rem;
 }
 
