--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,6 @@ body {
   margin: 0;
   background-size: contain;
   width: 100%;
-  height: 100vh;
   font-family: Roboto, sans-serif;
   font-size: 1.2rem;
 }
@@ -13,4 +12,9 @@ body {
 ::before,
 ::after {
   box-sizing: border-box;
+}
+
+a:link {
+  text-decoration: none;
+  list-style-type: none;
 }
