--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,11 @@ body {
   font-size: 1.2rem;
 }
 
-a:link {
+a {
   text-decoration: none;
-  list-style-type: none;
+  color: inherit;
 }
+
+/* a:hover {
+  color: inherit;
+} */
